Fix player components going off screen

--- a/src/components/queue/queue.css
+++ b/src/components/queue/queue.css
@@ -2,7 +2,7 @@
 
 .queue-container {
     width: 100%;
-    height: 40%;
+    height: 50%;
     border-radius: 30px;
     opacity: 1;
     background-image: repeating-radial-gradient(
